@@ -1,49 +1,0 @@
-/**   
- * License Agreement for Jaeksoft OpenSearchServer
- *
- * Copyright (C) 2010 Emmanuel Keller / Jaeksoft
- * 
- * http://www.open-search-server.com
- * 
- * This file is part of Jaeksoft OpenSearchServer.
- *
- * Jaeksoft OpenSearchServer is free software: you can redistribute it and/or
- * modify it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- *  (at your option) any later version.
- *
- * Jaeksoft OpenSearchServer is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License
- *  along with Jaeksoft OpenSearchServer. 
- *  If not, see <http://www.gnu.org/licenses/>.
- **/
-
-package com.jaeksoft.searchlib.analysis;
-
-import java.util.List;
-
-import org.apache.lucene.util.Attribute;
-
-public interface SynonymAttribute extends Attribute {
-
-	void setSynonymQueues(SynonymQueues synonymsQueues);
-
-	void setSynonyms(List<String> synonyms);
-
-	void setIndex(int index);
-
-	List<String> getSynonyms();
-
-	int incIndex();
-
-	SynonymQueues getSynonymQueues();
-
-	void resetSynonyms();
-
-	void checkSynonymQueue(SynonymMap synonymMap);
-
-}
